# website

./: .env  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: cxh24waicp9dv5v4d73a1mmr0w28d09n-source  fsfmxh9ls5a0p78ixchmi32axb8gsll6-source
backend/: .env  main.py  pyproject.toml  request.py
backend/api/: auth.py  users.py
backend/core/: config.py  security.py
backend/models/: auth.py
backend/services/: user_service.py
frontend/: package.json
frontend_bak/: deno.json  index.html
